day 4 - missing blocks (readPlace), clock handling and channelWidth optimisation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(routing VERSION 0.1.0 LANGUAGES C CXX)
 include(CTest)
 enable_testing()
 
-add_executable(${PROJECT_NAME}.app src/main.cpp src/constants.hpp src/routing.cpp src/net.cpp src/channel.cpp)
+add_executable(${PROJECT_NAME}.app src/main.cpp src/constants.hpp src/routing.cpp src/net.cpp src/channel.cpp src/block.cpp)
 
 target_compile_features(${PROJECT_NAME}.app PUBLIC cxx_std_20)
 
