--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,9 @@
         "streambuf": "cpp",
         "typeinfo": "cpp",
         "stack": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "chrono": "cpp",
+        "netfwd": "cpp",
+        "ratio": "cpp"
     }
 }
