deepCopy and retries work - channels are now also selected if the current track is free on them

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,12 @@
         "mutex": "cpp",
         "semaphore": "cpp",
         "stop_token": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "charconv": "cpp",
+        "optional": "cpp",
+        "format": "cpp",
+        "iomanip": "cpp",
+        "span": "cpp",
+        "variant": "cpp"
     }
 }
