--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "${workspaceFolder}/build/routing.app",
-        "args": ["tiny"],
+        "args": ["clma"],
         "stopAtEntry": false,
         "cwd": "${fileDirname}",
         "environment": [],
