doubly relevant channels

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,9 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "${workspaceFolder}/build/routing.app",
-        "args": ["clma"],
+        "args": ["./e64-4lut.net", "./e64-4lut.place", "./e64-4lut.route"],
         "stopAtEntry": false,
-        "cwd": "${fileDirname}",
+        "cwd": "${workspaceFolder}/build/",
         "environment": [],
         "externalConsole": false,
         "MIMode": "gdb",
